Closed Bug 1668575 Opened 5 years ago Closed 5 years ago

sw-wr: Don't use DMABUF when Software WebRender is active

Categories

(Core :: Graphics: WebRender, defect)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox83 --- disabled

People

(Reporter: jan, Assigned: aosmond)

References

(Blocks 2 open bugs)

Details

(Keywords: nightly-community)

Attachments

(1 file)

Gnome Wayland, Debian Testing
WebGL (widget.dmabuf-webgl.enabled) is grey, Video is green:
MOZ_X11_EGL=1 mozregression --launch 20201001094020 --pref gfx.webrender.all:true gfx.webrender.software:true media.ffmpeg.dmabuf-textures.enabled:true -a https://webglsamples.org/aquarium/aquarium.html -a https://bug1619882.bmoattachments.org/attachment.cgi?id=9149605

<snip>

Severity: -- → S3
Assignee: nobody → aosmond
Flags: needinfo?(aosmond)
Flags: needinfo?(aosmond)
Status: NEW → ASSIGNED
Pushed by aosmond@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c21b64c6ceea Disable DMABUF with software WebRender. r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch

MOZ_X11_EGL=1 mozregression --launch c21b64c6ceea --pref gfx.webrender.all:true gfx.webrender.software:true media.ffmpeg.dmabuf-textures.enabled:true -a https://webglsamples.org/aquarium/aquarium.html -a https://bug1619882.bmoattachments.org/attachment.cgi?id=9149605

Not entirely fixed: Video is still green.
(In general, could you check if DMABUF is correctly wired up? There are bugs like bug 1641603/bug 1666099.)

Status: RESOLVED → REOPENED
Resolution: FIXED → ---

MOZ_X11_EGL=1 mozregression --find-fix --bad 2020-10-16 --good 2020-11-13 --pref gfx.webrender.all:true gfx.webrender.software:true media.ffmpeg.dmabuf-textures.enabled:true -a https://webglsamples.org/aquarium/aquarium.html -a https://bug1619882.bmoattachments.org/attachment.cgi?id=9149605

I thought I tested both at the time. In any event, the secondary issue was fixed by bug 1675453.

Status: REOPENED → RESOLVED
Closed: 5 years ago5 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: